--- a/Phase 3 - Data analysis.qmd
+++ b/Phase 3 - Data analysis.qmd
@@ -37,7 +37,7 @@ library(lmtest)
 
 How do workforce characteristics, including wage levels, employment size, and net employment change, contribute to variations in CO2 emissions in energy-producing industries over time?
 
-In the first part of our analysis, we will focus on establishing a non-causal relationship between CO2 emissions, and industry characteristics (monthly average wage, industry size and net industry size change) using the Logarithmic Mean Divisia Index (LMDI) decomposition method to identify the contribution of different industry characteristics to changes in CO2 emissions.
+In the first part of our analysis, we will focus on establishing a non-causal relationship between CO2 emissions, and workforce characteristics (monthly average wage, employment size and net job change) using the Logarithmic Mean Divisia Index (LMDI) decomposition method to identify the contribution of different workforce characteristics to changes in CO2 emissions.
 
 The Logarithmic Mean Divisia Index (LMDI) is an analytical method that breaks down aggregate changes in a variable into several effects to identify the main drivers behind the changes in the variable of interest. Using the logarithmic mean, it allows for consistent results in the presence of zero or missing values. The LMDI can be applied in an additive or a multiplicative method : The additive method consists in representing the absolute effect of a factor to the changes in the variable of interest. The total change in the variable of interest is expressed as the sum of the contributions of all the factors taken into account. The multiplicative method corresponds to computing the relative contribution of each factor to the changes in the variable of interest (expressed in general in percentages). Then, the variable of interest is expressed as a product of the relative contributions of each variable.
 
@@ -105,7 +105,8 @@ ggdag(dag, text = FALSE) +
   geom_dag_label(nudge_y = -0.3, size = 3) + ### positioning and resizing the label names
   scale_fill_manual(values = node_colors) +  ### applying the custom color mapping to the nodes
   ggtitle("Causal Diagram for CO2 Emissions Analysis") + ### giving a title to the plot
-  theme(plot.title = element_text(hjust = 0.25))
+  theme(plot.title = element_text(hjust = 0.25)) + 
+  theme_minimal()
 ```
 
 Variable of interest
@@ -128,11 +129,13 @@ We chose to use `avg_EarnS` as a proxy for workforce skill level and investment 
 
 Another key variable is Net employment change (`total_FrmJbC`) which will be used as a proxy for contraction or expansion of firms in an industry. The hypothesis is that industries with quick expansions may emit more due to production scale (and inverse effect for industries shrinking).
 
-Additionnally, we create dummies to separate our analysis in groups :
+Additionnally, we will create a dummy to separate our analysis such that :
 
 -   `State` is divided in two (California and Texas)
 
--   A policy dummy was added to study the impact of new regulations aimed at reducing emissions. We will study the heterogeneity of response depending on the industry.
+-   A policy dummy was added to study the impact of new regulations aimed at reducing emissions. 
+
+We will study the heterogeneity of response depending on the industry.
 
 ## Data Description
 
